--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "notetaker",
+  "name": "note-taker",
   "version": "1.0.0",
-  "description": "AS A small business owner\r I WANT to be able to write and save notes\r SO THAT I can organize my thoughts and keep track of tasks I need to complete",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/2332fun/NoteTaker.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/2332fun/NoteTaker/issues"
-  },
-  "homepage": "https://github.com/2332fun/NoteTaker#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.16.4",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "util": "^0.12.4",
+    "uuid": "^8.3.2"
   }
 }
